--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -71,7 +71,10 @@
 			<img src="{{user.avatar.data}}" class="avatar-img"/>			
 		</div>		
 		<div class = "styled col-sm-12 col-md-12 col-xs-12 col-lg-12" ng-if="user.roles">
-			<span class = "fields-name">Is a</span> <explode wrap="roles" array="user.roles"></explode>
+			<span class = "fields-name">Is a</span> <explode wrap="roles" array="user.roles"></explode> 
+		</div>
+		<div class = "styled col-sm-12 col-md-12 col-xs-12 col-lg-12" ng-if="user.interviewed">
+			<span class = "fields-name">Has been </span>interviewed
 		</div>
 		<div class = "col-lg-7 col-sm-12 col-md-12 styled col-xs-12" ng-if="user.city">
 			<span class = "fields-name">Lives in </span>{{ cities[user.city].zh }}
@@ -96,7 +99,7 @@
 			<span class = "fields-name">Lived </span><explode array="user.ages"></explode> <span class = "fields-name"> years</span>
 		</div>		
 		<div class =  "styled col-lg-12 col-xs-12 col-sm-12 col-lg-12" ng-if="user.subjects">
-			<span class = "fields-name">Studies </span>
+			<span class = "fields-name">{{teachesStudies}} </span>
 			<explode wrap="subjects" array="user.subjects"></explode>
 		</div>
 		<div class = "styled col-lg-12 col-md-12 col-xs-12 col-sm-12 col-lg-12" ng-if="user.contact">			
@@ -109,11 +112,17 @@
 			<span class="fields-name">CV</span>
 			<span class="fields-value"><a target="_blank" href="{{user.cv}}">Open</a></span>
 		</div>
-		<div class = "styled col-lg-12 col-md-12 col-xs-12 col-sm-12 col-lg-12" ng-if="user.notes">
-			<span class="fields-name">Notes</span><br>
-			<notes notes=user.notes can-add="false"></notes>
+		<div class = "styled col-lg-12 col-md-12 col-xs-12 col-sm-12 col-lg-12">
+			<span class="fields-name">Associated with </span>
+			<span class="fields-value">{{jobKeys | json}}</span>
 		</div>
+		<div class = "styled col-lg-12 col-md-12 col-xs-12 col-sm-12 col-lg-12">
+			<span class="fields-name">Notes</span><br>
+			<notes notes="notes" can-add="true"></notes>
+		</div>
+
 	</div>
 	<!-- to add: jobs associated with, jobs applied for, payables, bank info, education potentially -->	
+
 	
 </div>
