--- a/app/views/books.html
+++ b/app/views/books.html
@@ -6,7 +6,7 @@
 
 
 <div class="page-header">
-	<h1 class="col-lg-8">Books</h1>
+	<h1 class="col-lg-8">Payments</h1>
 	<button class="btn btn-primary pull-right" ng-click="addItem()">New</button></h1>
 </div>
 
