--- a/app/views/templates/thickUserList.html
+++ b/app/views/templates/thickUserList.html
@@ -1,11 +1,21 @@
+<style>
+	.media-left img {
+		width: 107px;
+		max-height: 100px;
+	}
+</style>
+
 <div class="media" ng-repeat="(name, user) in users | orderBy: orderBy | filter:filterText">
   <div class="media-left">
-    <a href="#">
-      <img class="media-object" src="images/blank_teacher.png" alt="...">
+    <a ng-href="#/profile/{{user.$id}}/">
+      <img class="media-object" ng-if="user.avatar" ng-src="{{user.avatar.data}}" alt="...">      
+    </a>
+    <a ng-href="#/profile/{{user.$id}}/">
+      <img class="media-object" ng-if="!user.avatar" src="images/blank_teacher.png" alt="...">      
     </a>
   </div>
   <div class="media-body">
-    <h4 class="media-heading">{{user.firstName}}</h4>
+    <h4 class="media-heading"><a ng-href="#/profile/{{user.$id}}/">{{user.firstName}} {{user.lastName}}</a></h4>
 	<notes notes="user.notes" canAdd="false"></notes>
   </div>
 </div>
