new user takes you to edit page

--- a/app/views/users.html
+++ b/app/views/users.html
@@ -13,7 +13,7 @@
 <div class="page-header">
 	<h1>Users<small class="pull-right"><input type="text" class="" ng-model="filterText.$" placeholder="">
 	<button class = "btn btn-warning btn-link" ng-click="skinny = !skinny">Toggle View</button>
-	<button class="btn btn-primary btn-link" ng-click="addUser()">New Job</button></small></h1>		
+	<button class="btn btn-primary btn-link" ng-click="addUser()">New User</button></small></h1>		
 </div>
 	
 
