--- a/app/views/paymentsedit.html
+++ b/app/views/paymentsedit.html
@@ -1,35 +1,34 @@
 <div class="page-header">
-	<h1>{{payment.shortName}}<button class="btn btn-primary pull-right" ng-click="goToBook()">View Payment</button></h1>
+	<h1>Payment</h1>
 </div>
-
 <div>
 	<tabset type="pills">
-		<tab heading = "basic">
+		<tab heading = "Deets">
 			<div class = "form-group">
-				<label>Give a short name for this payment</label>
-				<input type="text" class="form-control" ng-model="book.shortName" ng-change="payment.$save()">
-			</div>
+				<label>Paid By</label>
+				<select class="form-control" ng-model="payment.paidBy" ng-options="u.$id as u.firstName for u in users"></select>
+			</div>	
+			<div class ="form-group">
+				<label>Paid To</label>
+				<select class="form-control" ng-model="payment.paidTo" ng-options="u.$id as u.firstName for u in users"></select>
+			</div>		
 			<div class = "form-group">
 				<label>Amount</label>
 				<input type="number" step="0.01" class="form-control" ng-model="payment.amount" ng-change="payment.$save()">
-			</div>
-			<div class="radio">
-				<label>
-					<input type="radio" ng-model="payment.inOut" value="0" checked>
-					Credit
-				</label>
-			</div>
-			<div class="radio">
-				<label>
-					<input type="radio" name="payment.inOut" value="1">
-					Debit
-				</label>
-			</div>
+			</div>		
+			<div class = "form-group">
+				<label>Currency</label>
+				<input type="text" class="form-control" ng-model="payment.currency" ng-change="payment.$save()">
+			</div>	
 			<div class = "form-group birthday">
 				<label>Date of Payment</label>
 				<div>
-					<datepicker ng-model="payment.datePaid" class="well" ng-change="saveDate(payment.datePaid)"></datepicker>
+					<datepicker ng-model="payment.whenPaid" class="well" ng-change="saveDate(payment.whenPaid)"></datepicker>
 				</div>
+			</div>
+			<div class = "styled col-lg-12 col-md-12 col-xs-12 col-sm-12 col-lg-12">
+				<span class="fields-name">Notes</span><br>
+				<notes notes="notes" can-add="true"></notes>
 			</div>
 		</tab>
 	</tabset>
