--- a/app/views/payments.html
+++ b/app/views/payments.html
@@ -6,11 +6,14 @@
 
 
 <div class="page-header">
-	<h1>Payments</h1>
-	<button class="btn btn-primary pull-right" ng-click="addItem()">New</button></h1>
+	<h1>
+		Payments
+		<small class="pull-right">
+			<button class = "btn btn-primary" ng-if="focusinControl.selectedItems.length > 0" ng-click="focusinControl.deleteItems()">Delete</button>
+			<button class="btn btn-link" ng-click="addItem()">New Payment</button>		
+		</small>
+	</h1>		
 </div>
-<button class="btn btn-default" ng-click="focusinControl.deleteItems()">Delete</button>
-
 
 
 
