--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,4 +2,5 @@
   <h1><a href="#/jobs">Show me jobs.</a></h1>
   <h1><a href="#/users">Show me teachers.</a></h1>
   <h1><a href="#">Request a teacher.</a></h1>
+  <button ng-click="sendMail()">mail</button>
 </div>
