--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -109,8 +109,7 @@
 			<span class = "fields-name">Available <br></span> {{user.schedule}}			
 		</div>
 		<div class = "styled col-lg-12 col-md-12 col-xs-12 col-sm-12 col-lg-12" ng-if="user.cv">
-			<span class="fields-name">CV</span>
-			<span class="fields-value"><a target="_blank" href="{{user.cv}}">Open</a></span>
+			<span class="fields-value"><a target="_blank" href="{{user.cv}}">Original Resume</a></span>
 		</div>
 		<div class = "styled col-lg-12 col-md-12 col-xs-12 col-sm-12 col-lg-12" ng-if="jobKeys.length > 0">
 			<span class="fields-name">Jobs</span><br>
