--- a/app/views/jobview.html
+++ b/app/views/jobview.html
@@ -91,15 +91,31 @@
 			{{job.longDesc}}
 		</div>
 	</div>
+	<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alerts.splice($index, 1)">
+		<span ng-bind-html="alert.msg"></span>
+	</alert>
 	<div id="apply" class = "apply_box well text-center">
 		<h4>Apply</h4>
 		<div class = "apply_socially"></div>
 		<div class = "apply_traditionally">
+			<div class = "user-info">
+				<div class = "form-group">
+					<label>First Name</label>
+					{{user.firstName}}
+				</div>
+				<div class = "form-group">
+					<label>Email</label>
+					{{user.loginEmail}}
+				</div>
+			</div>
 			<div class="button btn btn-default" ngf-select ngf-change="upload($files)">
 				Upload Your CV
 			</div>
-			<div class = "path_to_cv" ng-show="path_to_cv.length > 0">
-				<a ng-href="{{path_to_cv}}" target="blank_">Your Uploaded CV</a>
+			<div class = "path_to_cv pull-right" ng-show="user.cv.length > 0">
+				<a ng-href="{{user.cv}}" target="blank_">Your Uploaded CV</a>
+			</div>
+			<div class = "submitApplication">
+				<button class="btn btn-default">Submit</button>
 			</div>
 		</div>
 	</div>
@@ -120,3 +136,4 @@
     <!--img ngf-src="files[0]" ngf-default-src="'/thumb.jpg'" ngf-accept="'image/*'"-->
 
 
+{{u.cv}}
