--- a/app/views/profile_edit.html
+++ b/app/views/profile_edit.html
@@ -17,6 +17,10 @@
 <div class = "edit-profile-container">
 	<tabset type="pills" class="edit-profile-menu">
 
+	<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alerts.splice($index, 1)">
+		<span ng-bind-html="alert.msg"></span>
+	</alert>
+
 		<tab heading="Basic">
 			
 			<div class = "form-group">
@@ -103,11 +107,16 @@
 					<option value=""></option>
 					<option ng-repeat="l in languageLevel" value="{{$index}}">{{l.shortDesc}}</option>
 				</select>
+			</div>			
+			<div class = "form-group">
+				<label>View CVs</label><br>
+				<a href="{{user.cv}}" target="blank_">Original CV</a>
 			</div>
 			<div class = "form-group">
-				<label>CV</label>
-				<input type="text" class="form-control" ng-model="user.cv" ng-change="user.$save()">
-			</div>		
+				<label>Upload New CV</label><br>
+				<div class="button btn btn-default" ngf-select ngf-change="upload($files)">
+				Browse</div>
+			</div>	
 		</tab>		
 
 		<tab heading="Location">
