--- a/app/views/templates/job.html
+++ b/app/views/templates/job.html
@@ -145,37 +145,44 @@
 <!-- this template contains an entire job -->
 <!-- it will have public fields and private fields, including a list of applicants -->
 
+<div class="page-header">
+	<h1><a ng-href="#/jobview/{{job_.$id}}">{{job_.title | capitalizeFirst }}</a></h1>
+</div>
+
 
 <div class = "panel panel-default job-panel">
 
 	<!-- Public template of job details; fields should only be editable for admins -->
 	<div class="public-job-details">
 		<!-- title -->
-		<h3 class = "panel-heading">
+		<!--h3 class = "panel-heading">
 			<a ng-href="#/jobview/{{job_.$id}}">{{job_.title}}</a>
-		</h3>
-		<div class = "panel-heading-subtitle">
+		</h3-->
+		<!--div class = "panel-heading-subtitle">
 			<span class = "client-name"><a ng-href="/#/profile/{{client.userID}}">{{client.firstName}}</a></span>
 			<span> - </span>
 			<span class = "subtitle-location">			
 				<span class = "short-location" ng-if="job_.shortLocation">{{job_.shortLocation}}<i>, </i></span>				
 				<span class = "subtitle-city">{{cities[job_.city].en}}</span>
 			</span>
-		</div>
+		</div-->
 
 		<!-- description -->
-		<div class = "panel-body">
-			<span>{{job_.longDesc}}</span>
-			<notes notes="notes" can-add="true"></notes>			
-		</div>
+		<!--div class = "panel-body"-->
+			<!--span>{{job_.longDesc}}</span-->
+			<!--notes notes="notes" can-add="true"></notes-->			
+		<!--/div-->
 		
 
-			<form class = "edit-panel form-inline" collapse="isCollapsed">
-				<div class="text-center">
+			<form class = "edit-panel form-inline">
+				<!--div class="text-center">
 					-<button class="btn btn-link" ng-click="coll()">{{readMore}}</button>- 
-				</div>
+				</div-->
 
 				<ul class = "list-group">
+					<li class = "list-group-item">
+						<notes notes="notes" can-add="true"></notes>
+					</li>
 					<li class = "list-group-item">
 						<label>Title</label>
 						<input type="text" class="form-control" ng-model="job_.title" ng-change="save()">
@@ -259,7 +266,7 @@
 			<!-- end PUBLIC -->
 
 			<!-- begin PRIVATE -->
-			<div class="private-job-details" collapse="isCollapsed">
+			<div class="private-job-details">
 
 				<!-- begin APPLICANTS -->
 				<!-- APPLICANTS --> 
@@ -298,6 +305,27 @@
 					<select ng-model="job_.teacherID" ng-change="save()" ng-options="t.id as t.firstName for t in teachers" class="form-control reign-in">
 						<option value=""></option>										
 					</select>		
+				</li>
+				<li class = "list-group-item">
+					<h5>Applicants</h5>
+					<label>New</label>
+					<select ng-model="newApplicant" ng-change="addApplicant()" ng-options="t.id as t.firstName for t in teachers" class="form-control reign-in">
+						<option value=""></option>										
+					</select>
+					<table>
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Applied</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="a in applicants">
+<!-- 								<td>{{applicantInfo(a.$id).firstName}}</td>
+ -->								<td></td>
+							</tr>
+						</tbody>
+					</table>	
 				</li>
 				<li class="list-group-item subjects-list-item">
 					<span class="select-dropdown"><label>Status:</label></span>
