--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -68,7 +68,7 @@
 	<div class = "col-lg-offset-0 col-xs-offset-0 col-sm-offset-0">
 		<!-- at large res, float; at small res put on top -->
 		<div class = "profile-avatar col-xs-9 col-sm-4 col-lg-4 styled" ng-if="user.avatar && user.avatar.data">
-			<img src="{{user.avatar.data}}" class="avatar-img"/>			
+			<!--img src="{{user.avatar.data}}" class="avatar-img"/-->			
 		</div>		
 		<div class = "styled col-sm-12 col-md-12 col-xs-12 col-lg-12" ng-if="user.roles">
 			<span class = "fields-name">Is a</span> <explode wrap="roles" obj="user.roles"></explode> 		
