--- a/app/views/jobview.html
+++ b/app/views/jobview.html
@@ -42,6 +42,18 @@
 	.left {
 		padding-left: 0;
 	}
+	.apply_box {
+		background:lightgray;
+	
+		height:100%;
+	}
+	.llClear {
+		border-radius: 4px;
+		border:1px solid darkgray;
+		text-decoration: none;
+		color:black;
+		background:none;
+	}
 </style>
 
 <div class="page-header">
@@ -94,28 +106,30 @@
 	<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alerts.splice($index, 1)">
 		<span ng-bind-html="alert.msg"></span>
 	</alert>
-	<div id="apply" class = "apply_box well text-center">
-		<h4>Apply</h4>
+	<div id="apply" class = "apply_box well">
+		<h4 class="text-center">Apply</h4>
 		<div class = "apply_socially"></div>
 		<div class = "apply_traditionally">
 			<div class = "user-info">
 				<div class = "form-group">
-					<label>First Name</label>
+					<label>First Name</label><br>
 					{{user.firstName}}
 				</div>
 				<div class = "form-group">
-					<label>Email</label>
+					<label>Email</label><br>
 					{{user.loginEmail}}
 				</div>
-			</div>
-			<div class="button btn btn-default" ngf-select ngf-change="upload($files)">
-				Upload Your CV
-			</div>
-			<div class = "path_to_cv pull-right" ng-show="user.cv.length > 0">
-				<a ng-href="{{user.cv}}" target="blank_">Your Uploaded CV</a>
-			</div>
-			<div class = "submitApplication">
-				<button class="btn btn-default">Submit</button>
+				<div class = "form-group">
+					<label>CV</label><br>
+					<a ng-show="user.cv.length > 0" ng-href="{{user.cv}}" target="blank_" class="btn btn-default transparent llClear">Download</a>
+					<span class="btn btn-default transparent llClear" ngf-select ngf-change="upload($files)">Upload New</span>
+				</div>
+				<!-- <div class="button btn btn-default form-group" ngf-select ngf-change="upload($files)">
+					Upload New CV
+				</div>	 -->
+			</div>					<br>
+			<div class = "submitApplication form-group text-center">
+				<button class="btn btn-default llClear btn-lg">Apply Now!</button>
 			</div>
 		</div>
 	</div>
