--- a/app/views/templates/job.html
+++ b/app/views/templates/job.html
@@ -146,7 +146,7 @@
 <!-- it will have public fields and private fields, including a list of applicants -->
 
 <div class="page-header">
-	<h1><a ng-href="#/jobview/{{job_.$id}}">{{job_.title | capitalizeFirst }}</a></h1>
+	<h1><a ng-href="#/jobview/{{job_.$id}}">{{job_.title }}</a></h1>
 </div>
 
 
@@ -302,31 +302,42 @@
 					<span class="select-dropdown"><label>Teacher:</label>
 						<a ng-if="job_.teacherID" class="btn btn-link" ng-href="/#/profile/{{job_.teacherID}}">View Profile</a>
 					</span>
-					<select ng-model="job_.teacherID" ng-change="save()" ng-options="t.id as t.firstName for t in teachers" class="form-control reign-in">
+					<select ng-model="job_.teacherID" ng-change="save()" ng-options="t.id as (t.firstName + ' ' + t.lastName) for t in teachers" class="form-control reign-in">
 						<option value=""></option>										
 					</select>		
 				</li>
+
+
 				<li class = "list-group-item">
-					<h5>Applicants</h5>
-					<label>New</label>
-					<select ng-model="newApplicant" ng-change="addApplicant()" ng-options="t.id as t.firstName for t in teachers" class="form-control reign-in">
-						<option value=""></option>										
-					</select>
-					<table>
+					<h5 class="text-center">Applicants</h5>
+					
+					<table class="table">
 						<thead>
 							<tr>
 								<th>Name</th>
-								<th>Applied</th>
+								<th>Country</th>
+								<th>CV</th>
+								<th>When Applied</th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="a in applicants">
-<!-- 								<td>{{applicantInfo(a.$id).firstName}}</td>
- -->								<td></td>
+							<tr ng-repeat="a in appFormatted">
+							{{a}}
+								<td><a ng-href="#/profile/{{a.user.$id}}">{{a.user.firstName}} {{a.user.lastName}}</a></td>
+								<td>{{countries[a.user.country]}}</td>
+								<td><a href="{{a.user.cv}}" target="blank_">CV</a></td>
+								<td>{{a.when | date:'MM/dd'}}</td>
 							</tr>
 						</tbody>
 					</table>	
+					<select ng-model="newApplicant" ng-change="addApplicant(newApplicant)" ng-options="t.id as (t.firstName + ' ' + t.lastName) for t in teachers" class="form-control reign-in">
+						<option value="" class="text-center">Add New</option>										
+					</select>
 				</li>
+
+
+
+
 				<li class="list-group-item subjects-list-item">
 					<span class="select-dropdown"><label>Status:</label></span>
 					<select ng-model="job_.status" class="reign-in form-control" ng-change="save()" ng-options="k as s for (k,s) in jobStatuses">
@@ -343,7 +354,7 @@
 		<div class="footer-buttons btn-group" role="group" aria-label="...">
 			<!--button type="button" class="btn btn-link">Apply</button-->			
 			<!-- toggle to see more job details -->
-			<button class="btn btn-link" ng-click="coll()">{{readMore}}</button>	
+			<!--button class="btn btn-link" ng-click="coll()">{{readMore}}</button-->	
 			<ll-delete item="job_" collection="job_"></ll-delete>			
 			<button type="button" class="job-status-label btn btn-link pull-right" disabled>{{ jobStatuses[job_.status]}}</button>
 		</div>		
