trying to update user jobs list

--- a/app/views/jobview.html
+++ b/app/views/jobview.html
@@ -43,8 +43,7 @@
 		padding-left: 0;
 	}
 	.apply_box {
-		background:lightgray;
-	
+		margin:30px;
 		height:100%;
 	}
 	.llClear {
@@ -59,7 +58,7 @@
 <div class="page-header">
 	<h1>{{job.title}}<!--button class="btn btn-primary pull-right" data-spy="scroll" data-target="#apply">Apply</button-->
 	</h1>
-	<small>Last updated on {{job.dateModified | date:'MM/dd/yy'}}</small>
+	<small>Last updated <span am-time-ago="job.dateModified"></span></small>
 </div>
 
 <div class = "left col-lg-8">
@@ -121,8 +120,9 @@
 				</div>
 				<div class = "form-group">
 					<label>CV</label><br>
-					<a ng-show="user.cv.length > 0" ng-href="{{user.cv}}" target="blank_" class="btn btn-default transparent llClear">Download</a>
-					<span class="btn btn-default transparent llClear" ngf-select ngf-change="upload($files)">Upload New</span>
+					<a ng-show="user.cv.length > 0" ng-href="{{user.cv}}" target="blank_" class="btn btn-default llClear">Download</a>
+					<button class="btn btn-default llClear" ng-if="user.cv" ng-click="deleteCV()">Delete</button>
+					<span class="btn btn-default llClear" ngf-select ngf-change="upload($files)">Upload</span>
 				</div>
 				<!-- <div class="button btn btn-default form-group" ngf-select ngf-change="upload($files)">
 					Upload New CV
