--- a/app/views/profile_edit.html
+++ b/app/views/profile_edit.html
@@ -35,11 +35,7 @@
 			<div class = "form-group lastName">
 				<label>Last Name</label> <span class="label label-default">Private</span>
 				<input type="text" class="form-control" ng-model="user.lastName" ng-change="user.$save()">
-			</div>
-			<div class = "form-group chineseName">
-				<label>Chinese Name</label>
-				<input type="text" class="form-control" ng-model="user.chineseName" ng-change="user.$save()">
-			</div>
+			</div>			
 			<div class = "form-group country">
 				<label>Country of Citizenship</label>
 				<select class="form-control" ng-model="user.country" ng-change="user.$save()">
@@ -72,6 +68,10 @@
 					</div>
 					<div class="" ng-show="status">{{status}}</div>
 				</form>
+			</div>
+			<div class = "form-group chineseName">
+				<label>Chinese Name</label>
+				<input type="text" class="form-control" ng-model="user.chineseName" ng-change="user.$save()">
 			</div>
 			<div class = "form-group birthday">
 				<label>Birthday</label> <span class="label label-default">Private</span>
@@ -108,7 +108,7 @@
 					<option ng-repeat="l in languageLevel" value="{{$index}}">{{l.shortDesc}}</option>
 				</select>
 			</div>			
-			<div class = "form-group">
+			<div class = "form-group" ng-if="user.cv">
 				<label>View CVs</label><br>
 				<a href="{{user.cv}}" target="blank_">Original CV</a>
 			</div>
