--- a/app/views/templates/jobSnapshot.html
+++ b/app/views/templates/jobSnapshot.html
@@ -19,7 +19,7 @@
 		<i ng-if="job.city && job.shortLocation">-</i>
 		{{cities[job.city].en}}
 	</small>
-	<p>{{job.longDesc}}</p>	
+	<p>{{job.longDesc | limitTo: 200}}<span ng-if="job.longDesc.length > 200">...</span></p>	
 	<a class = "" ng-href="#/job-edit/{{job.$id}}">Edit</a>
 	<small class="whenUpdated pull-right"><span am-time-ago="job.dateModified"></span></small>
 </div>
