working on apply

--- a/app/views/templates/skinnyUserList.html
+++ b/app/views/templates/skinnyUserList.html
@@ -5,6 +5,7 @@
 			<th class="th-btn" ng-click="orderByFn('firstName')">Name</th>
 			<th class="th-btn" ng-click="orderByFn('roles')">Role</th>
 			<th class="th-btn" ng-click="orderByFn('country')">Country</th>
+			<th class="th-btn" ng-click="orderByFn('location')">Location</th>
 			<th class="th-btn" ng-click="orderByFn('dateAdded')">Added</th>
 			<th class="th-btn" ng-click="orderByFn('interviewed')">Interviewed</th>
 		</tr>
@@ -17,6 +18,7 @@
 				<explode wrap="roles" obj="user.roles"></explode>
 			</td>
 			<td>{{countries[user.country]}}</td>
+			<td>{{user.location}}</td>
 			<td><span am-time-ago="user.dateAdded"></span></td>
 			<td class="text-center">
 				<span ng-if="user.interviewed" class="text-center">✓</span>
