--- a/app/views/jobs.html
+++ b/app/views/jobs.html
@@ -90,7 +90,7 @@
 		<div class = "resultsNum">Showing {{filteredJobs.length}} jobs</div>
 		<div class="job-directive" ng-repeat="(key, job) in (filteredJobs = (jobs | orderBy: groupBy | jobsFilter: filterText | filter: filterSearch))">
 			<!--ll-job job="job"></ll-job-->
-			<job-snapshot job="job.$id"></job-snapshot>
+			<job-snapshot jobid="job.$id" admin="isAdmin"></job-snapshot>
 		</div>
 	</div>
 
