--- a/app/views/jobview.html
+++ b/app/views/jobview.html
@@ -43,8 +43,8 @@
 		padding-left: 0;
 	}
 	.apply_box {
-		margin:30px;
-		height:100%;
+		margin-top:30px;
+		background: white;
 	}
 	.llClear {
 		border-radius: 4px;
@@ -53,6 +53,15 @@
 		color:black;
 		background:none;
 	}
+	.loginSuggest {
+		padding-bottom: 5px;
+	}
+	  .css-form input.ng-invalid.ng-touched {
+	    background-color:#FA787E;
+	  }
+
+  
+</style>
 </style>
 
 <div class="page-header">
@@ -61,11 +70,10 @@
 	<small>Last updated <span am-time-ago="job.dateModified"></span></small>
 </div>
 
-<div class = "left col-lg-8">
+<div class = "left col-lg-8 col-md-7 col-sm-6">
 	<div class = "about-job">	
 		<div class = "fast-facts">
 			<table>
-				<thead></thead>
 				<tbody>
 					<tr ng-if="job.city">
 						<td class="catName"><strong>City:</strong></td>
@@ -109,33 +117,44 @@
 		<h4 class="text-center">Apply</h4>
 		<div class = "apply_socially"></div>
 		<div class = "apply_traditionally">
-			<div class = "user-info">
-				<div class = "form-group">
-					<label>First Name</label><br>
-					{{user.firstName}}
+			<form novalidate class="css-form" name="applicationForm">
+				<div class="not-logged-in" ng-if="!user">
+					<div class ="text-center loginSuggest">
+						<!-- it would be nice if this returned us to this page after logging in -->
+						<small class="text-center">Already a user? Apply easily by <a ng-href="/#/login">logging in</a> first.</small>
+					</div>				
+					<div class = "form-group">
+						<input class="form-control" type="text" ng-model="applicant.name" placeholder="Enter name" ng-change="y()">
+					</div>
+					<div class = "form-group">
+						<input class="form-control" type="email" ng-model="applicant.email" name="email" placeholder="Enter email" >
+						<small>That email is already in use. Why don't you <a ng-href="/#/login">sign in</a> first?</small>
+					</div>
 				</div>
-				<div class = "form-group">
-					<label>Email</label><br>
-					{{user.loginEmail}}
+				<div class = "coverLetter form-group">
+					<textarea class="textarea form-control" placeholder="Enter a note / cover letter (optional)"></textarea>
 				</div>
+			</form>
 				<div class = "form-group">
-					<label>CV</label><br>
-					<a ng-show="user.cv.length > 0" ng-href="{{user.cv}}" target="blank_" class="btn btn-default llClear">Download</a>
-					<button class="btn btn-default llClear" ng-if="user.cv" ng-click="deleteCV()">Delete</button>
-					<span class="btn btn-default llClear" ngf-select ngf-change="upload($files)">Upload</span>
+					<!--button class="btn btn-default llClear" ng-if="user.cv" ng-click="deleteCV()">Delete</button-->
+					<span class="btn btn-default llClear" ngf-select ngf-change="upload($files)" ng-show="applicant.name && applicant.email || user">
+						<span ng-if="user.cv">Update CV</span>
+						<span ng-if="!user.cv">Upload CV</span>
+					</span>
+					<a ng-show="user.cv.length > 0" ng-href="{{user.cv}}" target="blank_" class="btn btn-default llClear">Download CV</a>
 				</div>
 				<!-- <div class="button btn btn-default form-group" ngf-select ngf-change="upload($files)">
 					Upload New CV
 				</div>	 -->
 			</div>					<br>
-			<div class = "submitApplication form-group text-center">
-				<button class="btn btn-default llClear btn-lg">Apply Now!</button>
+			<div class = "submitApplication form-group text-center" ng-show="applicant.name && applicant.email || user">
+				<button class="btn btn-primary" ng-click="apply()">Submit</button>
 			</div>
 		</div>
 	</div>
 	<!--<apply user = "userID"></apply>-->
 </div>
-<div class = "right col-lg-4">
+<div class = "right col-lg-4 col-md-5 col-sm-6">
 	<div class = "related-jobs">
 		<h3>Other Jobs</h3>
 		<div class = "job_" ng-repeat="job_ in jobs | limitTo:4">	
