--- a/app/views/templates/jobSnapshot.html
+++ b/app/views/templates/jobSnapshot.html
@@ -12,6 +12,9 @@
 		font-weight: 300;
 		color:gray;
 	}
+	.jobSnapshot {
+		padding-bottom: 10px;
+	}
 </style>
 
 <div class = "jobSnapshot">	
@@ -23,12 +26,11 @@
 		<i ng-if="job.city && job.shortLocation">-</i>
 		{{cities[job.city].en}}
 	</small>
-	<p>{{job.longDesc | limitTo: 200}}<span ng-if="job.longDesc.length > 200">...</span></p>	
-	<a class = "" ng-href="#/job-edit/{{job.$id}}">Edit - </a>
-	<label class="status text-center" disabled>{{ status[job.status]}}</label>
+	<p>{{job.longDesc | limitTo: 200}}<span ng-if="job.longDesc.length > 200">...</span></p>
+	<span ng-if="admin">	
+		<a class = "" ng-href="#/job-edit/{{job.$id}}" ng-if="admin">Edit - </a>
+		<label class="status text-center" disabled>{{ status[job.status]}}</label>
+	</span>
 	<small class="whenUpdated pull-right"><span am-time-ago="job.dateModified"></span></small>
-
-
+	<!--notes notes="notes" can-add="true"></notes-->
 </div>
-
-<!-- <pre>{{job|json}}</pre> -->
