--- a/app/views/templates/notes.html
+++ b/app/views/templates/notes.html
@@ -6,15 +6,22 @@
 		background-color: whitesmoke;
 		font-size:small;
 		margin-top:10px;
+		max-height:10px;
+		overflow-y:auto;
 	}
 	textarea {
 		height:36px;
 	}
+
 	.notesAboveFold td {
 		border:none !important;
 	}	
 	.showAdd:hover {
 		cursor: pointer;
+	}
+	.tableWrapper {
+		max-height: 200px;
+		overflow-y:scroll;
 	}
 </style>
 
@@ -26,11 +33,13 @@
 		</div>
 	</div>
 	<a ng-show="canAdd === true" ng-click="showAdd = !showAdd" class="showAdd">Add Note</a>
-	<table class="table notesAboveFold">		
-		<tr ng-repeat="note in notes | orderBy:'-date'">
-			<td>{{note.value || note.notevalue }}</td>
-			<td>{{note.user || note.userid | limitTo: 4}}</td>
-			<td>{{note.date | date:'MM/dd'}}</td>
-		</tr>
-	</table>
+	<div class = "tableWrapper">
+		<table class="table notesAboveFold">		
+			<tr ng-repeat="note in notes | orderBy:'-date'">
+				<td>{{note.value || note.notevalue }}</td>
+				<td>{{note.user || note.userid | limitTo: 4}}</td>
+				<td>{{note.date | date:'MM/dd'}}</td>
+			</tr>
+		</table>
+	</div>
 </div>
