new structure for applications

--- a/app/views/jobview.html
+++ b/app/views/jobview.html
@@ -148,7 +148,7 @@
 				</div>	 -->
 			</div>					<br>
 			<div class = "submitApplication form-group text-center" ng-show="applicant.name && applicant.email || user">
-				<button class="btn btn-primary" ng-click="apply()">Submit</button>
+				<button class="btn btn-primary" ng-click="apply()">{{doneApplied}}</button>
 			</div>
 		</div>
 	</div>
