--- a/app/views/payments.html
+++ b/app/views/payments.html
@@ -21,6 +21,7 @@
 <table class = "table table-striped booksTbl">
 	<thead>
 		<th></th>
+		<th></th>
 		<th>Date Paid</th>
 		<!-- <th>Date Added</th>
 		<th>Date Modified</th> -->
@@ -31,12 +32,14 @@
 	</thead>
 	<tbody>
 		<tr ng-repeat="i in items">
+			<td><a ng-href="#/paymentsEdit/{{i.$id}}">{{$index + 1}}</a></td>
 			<td><batch-delete item="i" control="focusinControl"></batch-delete></td>
-			<td><a ng-href="#/paymentsEdit/{{i.$id}}">{{i.whenPaid | date:'MM/dd/yy'}}</a></td>
+
+			<td>{{i.whenPaid | date:'MM/dd/yy'}}</td>
 			<!-- <td>{{i.whenAdded | date:'MM/dd/yy'}}</td>
 			<td>{{i.whenUpdated | date:'MM/dd/yy'}}</td> -->
 			<td>{{i.amount}} {{i.currency}}</td>
-			<td><a ng-href="#/jobview/{{i.job}}">Job</a></td>
+			<td><a ng-if="i.job" ng-href="#/jobview/{{i.job}}">Job</a></td>
 			<td><visit who="i.paidBy"></visit></td>
 			<td><visit who="i.paidTo"></visit></td>
 		</tr>
