--- a/app/views/paymentsedit.html
+++ b/app/views/paymentsedit.html
@@ -19,7 +19,14 @@
 			<div class = "form-group">
 				<label>Currency</label>
 				<input type="text" class="form-control" ng-model="payment.currency" ng-change="payment.$save()">
-			</div>	
+			</div>
+			<div class = "form-group">
+				<label>Job <small>If applicable</small>
+				<select class="form-control" ng-model="payment.job" ng-change="payment.$save()">
+				<option></option>
+ 				<option ng-repeat="j in jobs" value="{{j.$id}}">{{j.title}}</option>
+ 				</select>
+			</div>
 			<div class = "form-group birthday">
 				<label>Date of Payment</label>
 				<div>
