--- a/app/views/jobview.html
+++ b/app/views/jobview.html
@@ -124,10 +124,10 @@
 						<small class="text-center">Already a user? Apply easily by <a ng-href="/#/login">logging in</a> first.</small>
 					</div>				
 					<div class = "form-group">
-						<input class="form-control" type="text" ng-model="applicant.name" placeholder="Enter name">
+						<input class="form-control" type="text" ng-model="applicant.name" placeholder="Enter First Name">
 					</div>
 					<div class = "form-group">
-						<input class="form-control" type="email" ng-model="applicant.email" name="email" placeholder="Enter email" >
+						<input class="form-control" type="email" ng-model="applicant.email" name="email" placeholder="Enter Email" >
 						<small>That email is already in use. Why don't you <a ng-href="/#/login">sign in</a> first?</small>
 					</div>
 				</div>
